--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -12,12 +12,14 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
+        android:layout_width="350dp"
+        android:layout_height="90dp"
         android:layout_margin="18dp"
-        android:text="SIGN UP"
+        android:text="SIGN UP IN RANA"
+        android:textColor="#E7E715"
         android:textSize="35sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        tools:ignore="HardcodedText,TextContrastCheck,TextSizeCheck" />
 
     <ImageView
         android:id="@+id/imageView3"
@@ -27,10 +29,10 @@
         android:layout_margin="15dp"
         android:background="@drawable/imageshape"
         android:src="@drawable/img_1"
-        />
+        tools:ignore="ContentDescription" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="370dp"
+        android:layout_width="380dp"
         android:layout_height="70dp"
         android:layout_marginTop="30dp"
         app:helperText="*Required"
@@ -38,17 +40,19 @@
         android:layout_gravity="center">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="370dp"
+            android:layout_width="360dp"
             android:layout_height="60dp"
+            android:layout_gravity="center"
             android:background="@drawable/inputlaypoutdesign"
             android:hint="NAME"
             android:inputType="textPersonName"
             android:textColor="#000000"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            tools:ignore="HardcodedText,TextContrastCheck" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="370dp"
+        android:layout_width="380dp"
         android:layout_height="70dp"
         android:layout_marginTop="12dp"
         app:helperText="*Required"
@@ -56,18 +60,20 @@
         android:layout_gravity="center">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="370dp"
+            android:layout_width="360dp"
             android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:background="@drawable/inputlaypoutdesign"
             android:hint="EMAIL"
+            android:inputType="textEmailAddress"
             android:textColor="#000000"
             android:textStyle="bold"
-            android:background="@drawable/inputlaypoutdesign"
-            android:inputType="textEmailAddress" />
+            tools:ignore="HardcodedText,TextContrastCheck" />
     </com.google.android.material.textfield.TextInputLayout>
 
 
     <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="370dp"
+        android:layout_width="380dp"
         android:layout_height="70dp"
         android:layout_marginTop="12dp"
         app:helperText="*Required"
@@ -76,14 +82,15 @@
         android:layout_gravity="center">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="370dp"
+            android:layout_width="360dp"
             android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:background="@drawable/inputlaypoutdesign"
             android:hint="PASSWORD"
+            android:inputType="numberPassword"
             android:textColor="#000000"
             android:textStyle="bold"
-            android:background="@drawable/inputlaypoutdesign"
-            android:inputType="numberPassword"
-            />
+            tools:ignore="HardcodedText,TextContrastCheck" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
@@ -94,6 +101,8 @@
         android:layout_marginTop="20dp"
         android:backgroundTint="#F2876B"
         android:text="SIGN UP"
+        android:textColor="#6D4C41"
         android:textSize="20sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        tools:ignore="HardcodedText" />
 </LinearLayout>
