--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:orientation="vertical"
-    android:background="#120F0F"
+    android:background="#1B1212"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
