--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -12,10 +12,10 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="350dp"
+        android:layout_width="wrap_content"
         android:layout_height="90dp"
         android:layout_margin="18dp"
-        android:text="SIGN UP IN RANA"
+        android:text="SIGN UP "
         android:textColor="#E7E715"
         android:textSize="35sp"
         android:textStyle="bold"
@@ -46,7 +46,8 @@
             android:id="@+id/line1"
             android:layout_gravity="center"
             android:background="@drawable/inputlaypoutdesign"
-            android:hint="UNIQUE ID"
+            android:hint=" UNIQUE ID"
+            android:drawableStart="@drawable/baseline_person_24"
             android:inputType="textPersonName"
             android:textColor="#000000"
             android:textStyle="bold"
@@ -67,7 +68,8 @@
             android:id="@+id/line2"
             android:layout_gravity="center"
             android:background="@drawable/inputlaypoutdesign"
-            android:hint="EMAIL"
+            android:hint=" EMAIL"
+            android:drawableStart="@drawable/baseline_email_24"
             android:inputType="textEmailAddress"
             android:textColor="#000000"
             android:textStyle="bold"
@@ -90,7 +92,8 @@
             android:id="@+id/line3"
             android:layout_gravity="center"
             android:background="@drawable/inputlaypoutdesign"
-            android:hint="PASSWORD"
+            android:hint=" PASSWORD"
+            android:drawableStart="@drawable/baseline_password_24"
             android:inputType="numberPassword"
             android:textColor="#000000"
             android:textStyle="bold"
